--- a/content/dispersion_presentation.qmd
+++ b/content/dispersion_presentation.qmd
@@ -22,6 +22,18 @@ require(car)
 
 ::: columns
 ::: {.column width="50%"}
+![](rpn_ortho_trace_centroids.png){.absolute top="10" left="1" width="350" height="1250"}
+:::
+
+::: {.column width="50%"}
+![](rpn_quadrat_count_2023_03_18.png){.absolute top="10" right="1" width="575" height="425"}
+:::
+:::
+
+------------------------------------------------------------------------
+
+::: columns
+::: {.column width="50%"}
 ![](rpn_wave_fig_c.png){.absolute top="10" left="1" width="450" height="375"}
 :::
 
