--- a/soil2.qmd
+++ b/soil2.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Soil"
-author: "kb"
+author: "jjh"
 editor: visual
 ---
 
@@ -9,44 +9,44 @@ require(tidyverse)
 ```
 
 ```{r}
-soil <- read.csv('soil.csv') %>%
+soil_full <- read.csv('soil_full.csv') %>%
+  as_tibble()
+```
+
+```{r}
+soil_full
+```
+
+```{r}
+soil <- read.csv('soil_full.csv') %>%
   as_tibble() %>%
-  #  mutate(size_cm = area*10000) %>%
-  group_by(ParentMaterials, Depth) %>%
-  dplyr::summarize(mean = mean(MBCugCpergDrySoil), 
-                   sd = sd(MBCugCpergDrySoil), 
+  mutate_at(vars(material, range, range_mean), factor) %>%
+  group_by(material, range_mean) %>%
+  dplyr::summarize(mean = mean(mbc), 
+                   sd = sd(mbc), 
                    n = n(),
                    se = sd/sqrt(n)
   ) %>%
-  dplyr::mutate(se = sd / sqrt(n),
+  mutate(se = sd / sqrt(n),
          lower.ci = mean - qt(1 - (0.05 / 2), n - 1) * se,
-         upper.ci = mean + qt(1 - (0.05 / 2), n - 1) * se) %>%
-  #mutate_at(vars(Site), factor) %>%
-  #add_column(
-  #  location = c('Anakena', 'Manavai', 'Southeast')
-  #) %>%
-  mutate_at(vars(ParentMaterials, Depth), factor)
+         upper.ci = mean + qt(1 - (0.05 / 2), n - 1) * se)
 ```
 
 ```{r}
-x_labels = c("0 - 20 cm")
+soil
 ```
 
 ```{r}
-soil.barplot <- ggplot(soil, aes(x = Depth, y = mean, fill = ParentMaterials)) +   
+x_labels = c("0 - 10 cm", "10 - 30 cm", "30 - 50 cm", "50 - 70 cm", "70 - 90 cm", "90+ cm")
+```
+
+```{r}
+soil.barplot <- ggplot(soil, aes(x = range_mean, y = mean, fill = material)) +   
   geom_bar(stat = "identity", position = position_dodge(width = 0.8), width = 0.75, color = "#2b2b2b", linewidth = 0.50, alpha = 0.6) +
   geom_linerange(aes(ymin = mean, ymax = mean + se), position = position_dodge(width = 0.8), linewidth = 0.75) +
-  #scale_y_continuous(limits = c(0.0, 1.0), labels = function(x) paste0(x * 100)) + 
   scale_x_discrete(expand = c(0, 1), labels = x_labels) + 
-  #scale_fill_manual(breaks = c("North", "West",
-  #                             "Southeast"),
-  #                  values = c("red", "blue", 
-  #                             "green"), 
-  #                  labels = c("North", "West",
-  #                             "Southeast")) +
-  #facet_wrap( ~ depth2, labeller = as_labeller(label_names), dir = "v", ncol = 1) + 
   ggtitle(expression(paste(italic(" Soil")))) +
-  ylab(expression(paste("MBCugCpergDrySoil"))) +
+  ylab(expression(paste("mbc"))) +
   labs(x = NULL) +
   theme(strip.text = element_text(size = 10, color = "black", hjust = 0.50),
         strip.background = element_rect(fill = "#FFFFFF", color = NA),    
@@ -82,7 +82,7 @@ soil_full
 ```
 
 ```{r}
-soil.lm <- lm(MBCugCpergDrySoil ~ AveDepthcm * ParentMaterials, data = soil_full)
+soil.lm <- lm(mbc ~ depth * material, data = soil_full)
 ```
 
 ```{r}
@@ -92,5 +92,20 @@ plot(soil.lm)
 
 ```{r}
 summary(soil.lm)
+```
+
+```{r}
+ggplot(soil_full, aes(x = depth, y = mbc, color = material)) +
+  geom_point(size = 1.5)+
+  xlab("depth") +
+  ylab("mbc") +
+  ggtitle("Soil") +
+  theme(axis.title.x = element_text(face = "bold", size = 14), 
+        axis.title.y = element_text(face = "bold", size = 14), 
+        axis.text.y  = element_text(size = 10),
+        axis.text.x  = element_text(size = 10), 
+        legend.text = element_text(size = 10),
+        legend.title = element_text(size = 10, face = "bold"),
+        plot.title = element_text(hjust = 0.5, face = "bold", size = 16))
 ```
 
