--- a/content/soil.qmd
+++ b/content/soil.qmd
@@ -72,6 +72,60 @@ soil.barplot <- ggplot(soil, aes(x = range_mean, y = mean, fill = material)) +
 soil.barplot
 ```
 
+#### Soil Main File - Numbered categories for depth
+
+```{r}
+soil_main <- read.csv('soil_main.csv') %>%
+  as_tibble() %>%
+  mutate_at(vars(material, depth2), factor) %>%
+  group_by(material, depth2) %>%
+  dplyr::summarize(mean = mean(mbc), 
+                   sd = sd(mbc), 
+                   n = n(),
+                   se = sd/sqrt(n)
+  ) %>%
+  mutate(se = sd / sqrt(n),
+         lower.ci = mean - qt(1 - (0.05 / 2), n - 1) * se,
+         upper.ci = mean + qt(1 - (0.05 / 2), n - 1) * se)
+```
+
+```{r}
+soil_main
+```
+
+```{r}
+x_labels = c("1", "2", "3", "4", "5", "6", "7", "8", "9")
+```
+
+```{r}
+soil_main.barplot <- ggplot(soil_main, aes(x = depth2, y = mean, fill = material)) +   
+  geom_bar(stat = "identity", position = position_dodge(width = 0.9), width = 0.75, color = "#2b2b2b", linewidth = 0.50, alpha = 0.6) +
+  geom_linerange(aes(ymin = mean, ymax = mean + se), position = position_dodge(width = 0.9), linewidth = 0.75) +
+  scale_x_discrete(expand = c(0, 1), labels = x_labels) + 
+  ggtitle(expression(paste(italic(" Soil")))) +
+  ylab(expression(paste("mbc"))) +
+  labs(x = NULL) +
+  theme(strip.text = element_text(size = 10, color = "black", hjust = 0.50),
+        strip.background = element_rect(fill = "#FFFFFF", color = NA),    
+        panel.background = element_rect(fill = "#FFFFFF", color = NA),
+        panel.grid.major.x = element_blank(),
+        panel.grid.minor.x = element_blank(),
+        panel.grid.minor.y = element_blank(),
+        panel.grid.major.y = element_line(color = "#b2b2b2"),
+        panel.spacing.x = unit(1, "cm"),
+        panel.spacing.y = unit(0.5, "cm"),
+        panel.spacing = unit(1, "lines"),
+        axis.ticks = element_blank(),
+        legend.position = "right",
+        plot.title = element_text(size = 11),
+        axis.title.y = element_text(size = 11),
+        legend.title = element_blank())
+```
+
+```{r}
+soil_main.barplot
+```
+
 ```{r}
 soil_full
 ```
